--- a/shapes.html
+++ b/shapes.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>css shapes</title>
-  <link rel="stylesheet" href="shapes.css"/>
+  <link rel="stylesheet" href="triangle.css"/>
+  <link rel="stylesheet" href="arrow.css" />
 </head>
 <body>
   <div id="square"></div>
